--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "outDir": "dist/esm",
+    "noUnusedParameters": false,
+    "outDir": "dist",
     "sourceMap": true,
     "target": "es2015"
   },
