--- a/demo/ios/App/Podfile
+++ b/demo/ios/App/Podfile
@@ -6,8 +6,8 @@ target 'App' do
   pod 'CapacitorFirebaseMessagingPlugin', :path => '../../../'
 
   # Automatic Capacitor Pod dependencies, do not delete
-  pod 'Capacitor', :path => '../../../../../node_modules/@capacitor/ios'
-  pod 'CapacitorCordova', :path => '../../../../../node_modules/@capacitor/ios'
+  pod 'Capacitor', :path => '../../../node_modules/@capacitor/ios'
+  pod 'CapacitorCordova', :path => '../../../node_modules/@capacitor/ios'
   
   # Do not delete
 end
