--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@capacitor/core": "latest"
   },
   "devDependencies": {
+    "@capacitor/android": "latest",
     "@capacitor/cli": "latest",
+    "@capacitor/ios": "^1.0.0-beta.13",
     "firebase-admin": "^6.5.0",
     "typescript": "^2.6.2"
   },
