--- a/demo/android/settings.gradle
+++ b/demo/android/settings.gradle
@@ -2,6 +2,6 @@ include ':app'
 include ':capacitor-cordova-android-plugins'
 project(':capacitor-cordova-android-plugins').projectDir = new File('./capacitor-cordova-android-plugins/')
 include ':capacitor-firebase-messaging-plugin'
-project(':capacitor-firebase-messaging-plugin').projectDir = new File('../../android/plugin/')
+project(':capacitor-firebase-messaging-plugin').projectDir = new File('../../android/@co.mmons/capacitor-firebase-messaging-plugin')
 
 apply from: 'capacitor.settings.gradle'
