--- a/ios/Plugin/Podfile
+++ b/ios/Plugin/Podfile
@@ -1,13 +1,15 @@
-# Uncomment the next line to define a global platform for your project
 platform :ios, '11.0'
 
 target 'Plugin' do
   use_frameworks!
   pod 'Firebase/Messaging'
-  pod 'Capacitor'
+  pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
+  pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
 end
 
 target 'PluginTests' do
   use_frameworks!
-  pod 'Capacitor'
+
+  pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
+  pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
 end
