--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/fs-extra": "^8.0.0",
     "firebase-admin": "^6.5.0",
     "tslib": "^1.10.0",
-    "typescript": "~3.6.0"
+    "typescript": "^3.9.5"
   },
   "peerDependencies": {
     "@capacitor/core": "latest"
