--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,5 @@
+include ':capacitor-android'
+project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
+
 include ':capacitor-firebase-messaging-plugin'
 project(':capacitor-firebase-messaging-plugin').projectDir = new File('@co.mmons/capacitor-firebase-messaging-plugin')
