--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "co.mmons",
   "license": "MIT",
   "devDependencies": {
+    "@capacitor/core": "latest",
     "@capacitor/android": "latest",
     "@capacitor/cli": "latest",
     "@capacitor/ios": "latest",
@@ -21,7 +22,10 @@
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "@capacitor/core": "latest"
+    "@capacitor/core": "latest",
+    "@capacitor/android": "latest",
+    "@capacitor/cli": "latest",
+    "@capacitor/ios": "latest"
   },
   "capacitor": {
     "ios": {
